# zipvoice-onnx

./: $null  .gitignore  AGENTS.md  README.md  app.py  app.spec  build.bat  build.py  check_provider.py  download_models.ps1  pyproject.toml  requirements.txt  run.bat  setup.iss  test_asr_chinese.py
examples/: chinese.py  chinese_20k.py  chinese_loop.py  english.py  english_espeak.py  english_espeak_fast.py  fastapi_client.py  hebrew.py  test_chinese_g2p.py  test_interrupt.py
plans/fastapi_integration/: validation_001.md  validation_001.py
scripts/: export_vocos.py
src/zipvoice_onnx/: __init__.py  audio.py  audio_processing.py  model.py  server.py  tokenizer.py  utils.py  vocoder.py
src/zipvoice_onnx/web/: app.js  index.html  style.css
stash/: poc.py
