[project]
name = "zipvoice-onnx"
version = "0.1.0"
description = "ZipVoice ONNX inference library"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "lhotse>=1.0.0",
    "numpy>=2.3.4",
    "onnxruntime>=1.23.2",
    "pydub>=0.25.0",
    "pyyaml>=6.0.3",
    "soundfile>=0.13.1",
    "vocos>=0.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchcodec>=0.9.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
