[project]
name = "zipvoice-onnx"
version = "0.1.0"
description = "ZipVoice ONNX inference library"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=2.3.4",
    "onnxruntime>=1.23.2",
    "soundfile>=0.13.1",
    "aiohttp>=3.8.0,<4.0.0",
    "tabulate>=0.4.4,<1.0.0",
    "opencv-python",
    "torch",
    "tqdm",
    "click>=7.1,<8.2",
    "torchvision",
    "six",
    "sniffio>=1.3.0",
    "sortedcontainers",
    "umap-learn",
    "phonemizer-fork",
    "espeakng-loader",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
