[project]
name = "zipvoice-onnx"
version = "0.1.0"
description = "ZipVoice ONNX inference library"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=2.3.4",
    "onnxruntime-gpu==1.21.1",
    "soundfile>=0.13.1",
    "tqdm",
    "phonemizer-fork",
    "espeakng-loader",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pypinyin",
    "websockets",
    "sherpa-onnx==1.12.40",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyarmor",
    "pyinstaller",
]

